# Deep-sleeping

./: .gitcore  README.md  pyproject.toml
src/non_primary_discriminator/: __init__.py  audio.py  config.py  dataset.py  model.py  predict.py  train.py
src/non_primary_discriminator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
